apps/base/jellyfin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    toolkit.fluxcd.io/tenant: dev-team
